--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       run: cd frontend && npm install
 
     - name: Build Angular app
-      run: cd frontend && ng build --prod
+      run: cd frontend && ng build --configuration "production"
 
     - name: Copy Angular build to Spring Boot static
       run: cp -r frontend/dist/budget-buddy/* backend/src/main/resources/static/
