--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -30,7 +30,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.less"
+              "src/styles.less",
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": []
           },
