--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@swimlane/ngx-datatable": "^20.1.0",
+    "@types/dinero.js": "^1.9.2",
+    "dinero.js": "^1.9.1",
     "firebase": "^10.5.0",
     "firebaseui": "^6.1.0",
     "font-awesome": "^4.7.0",
