--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -30,6 +30,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
+	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
@@ -42,14 +45,10 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
-task loadLocalProperties {
-    doLast {
-        Properties localProps = new Properties()
-        file("local.properties").withInputStream { localProps.load(it) }
-        localProps.each { project.ext.set(it.key, it.value) }
-    }
-}
-
 tasks.named("bootRun").configure {
-    dependsOn loadLocalProperties
+  Properties localProps = new Properties()
+  file("local.properties").withInputStream { localProps.load(it) }
+  localProps.each { 
+    environment "$it.key", "$it.value"
+  }
 }
