--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.0",
+    "@angular/cdk": "^16.2.9",
     "@angular/common": "^16.2.10",
     "@angular/compiler": "^16.2.10",
     "@angular/core": "^16.1.0",
     "@angular/fire": "7.6.0",
     "@angular/forms": "^16.1.0",
+    "@angular/material": "^16.2.9",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.2.10",
     "@angular/router": "^16.1.0",
@@ -25,6 +27,7 @@
     "firebase": "^10.5.0",
     "firebaseui": "^6.1.0",
     "font-awesome": "^4.7.0",
+    "moment": "^2.29.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "typeface-sriracha": "^1.1.13",
