Continue debugging allowed origins

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,2 +1,2 @@
 spring.jpa.hibernate.ddl-auto=update
-budbud.allowed.origins=http://localhost:*,https://budget.jdkendall.com:*
+budbud.allowed.origins=http://localhost:4200,http://localhost:8080,https://budget.jdkendall.com,https://budget.jdkendall.com:8080
