Implement Dashboard widget grid and add placeholder widgets

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,14 +21,22 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.2.10",
     "@angular/router": "^16.1.0",
+    "@fortawesome/angular-fontawesome": "^0.13.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@swimlane/ngx-datatable": "^20.1.0",
     "@types/dinero.js": "^1.9.2",
+    "angular-gridster2": "^16.0.0",
+    "angular-plotly.js": "^5.2.2",
     "dinero.js": "^1.9.1",
     "firebase": "^10.5.0",
     "firebaseui": "^6.1.0",
     "font-awesome": "^4.7.0",
     "moment": "^2.29.4",
     "ngx-currency": "^4.0.0",
+    "plotly.js-dist-min": "^2.27.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "typeface-sriracha": "^1.1.13",
@@ -39,6 +47,7 @@
     "@angular/cli": "~16.1.6",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~5.1.1",
+    "@types/plotly.js-dist-min": "^2.3.3",
     "firebase-tools": "^12.7.0",
     "jasmine-core": "~5.1.1",
     "karma": "~6.4.0",
