--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,6 @@
     "@angular/router": "^16.1.0",
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-brands-svg-icons": "^6.4.0",
-    "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@swimlane/ngx-datatable": "^20.1.0",
     "@types/dinero.js": "^1.9.2",
@@ -55,6 +53,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3"
+    "typescript": "~5.1.3",
+    "webpack-bundle-analyzer": "^4.9.1"
   }
 }
