Linting clean-up

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,3 +1,4 @@
+//file:noinspection GroovyAssignabilityCheck
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.5'
@@ -39,6 +40,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	testCompileOnly 'org.junit.jupiter:junit-jupiter-api:5.10.0'
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
+	testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.10.0'
 }
 
 tasks.named('test') {
